--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "npm": "6.4.1"
   },
   "dependencies": {
-    "aws-sdk": "2.94.0",
+    "aws-sdk": "^2.574.0",
     "class.extend": "0.9.2",
     "minimist": "1.2.0",
     "q": "1.5.1",
